Fixed full images not showing up

--- a/src/main/resources/webapp/react/src/components/albums/media/image_media/image_view/ImageView.css
+++ b/src/main/resources/webapp/react/src/components/albums/media/image_media/image_view/ImageView.css
@@ -1,21 +1,30 @@
 .image_view_container {
-
+    position: fixed;
+    height: calc(100vh - 66px);
+    width: 100vw;
+    top: 66px;
+    left: 0;
 }
 
-.image_view_image_container {
+.image_view_content {
     position: relative;
     height: 100%;
     width: 100%;
 }
 
 .image_view_image {
-    transform: translateY(-50%);
-    max-height: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
     max-width: 100%;
+    max-height: 100%;
 }
 
 .image_view_container_modal {
-    position: fixed;
+    position: absolute;
     height: 100%;
     width: 100%;
     top: 0;
