--- a/src/main/resources/webapp/react/src/components/albums/media/image_media/image_view/image_view_controls/ImageViewControls.css
+++ b/src/main/resources/webapp/react/src/components/albums/media/image_media/image_view/image_view_controls/ImageViewControls.css
@@ -2,6 +2,7 @@
     position: absolute;
     text-align: center;
     width: 100%;
+    bottom: 25px;
 }
 
 .image_view_controls_container > img {
